2007-04-19  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/core/xsl/forminput.xsl: Suppress "type" attribute on "form" element
	* projects/core/xsl/master.xsl: 
	Add "type" attribute for "script" element in <pfx:script> template
	* projects/core/xsl/utils.xsl: 
	Fixed javascript code for editor console to make it work in IE (version 6)

2007-04-13  Martin Leidig  <mleidig@schlund.de>

	Made newproject.sh working again by updating the general configuration.

	* skel/projects/common/conf/pustefix.xml

2007-04-12  Martin Leidig  <mleidig@schlund.de>

	Added JSON serialization tests for Lists and Maps, e.g. unparameterized
	Lists and Maps, which can be serialized, but not deserialized due to
	missing type information.

	* tests/junit/de/schlund/pfixcore/webservice/jsonws/JSONSerializerTest.java
	* tests/junit/de/schlund/pfixcore/webservice/jsonws/ReadOnlyBean.java
	* tests/junit/de/schlund/pfixcore/webservice/jsonws/TestBean.java

2007-04-11  Martin Leidig  <mleidig@schlund.de>

	Added JSON (de-)serialization support for generic Lists and Maps. Because of
	the restrictions of the JSON format, especially the absence of type information,
	the support for Lists and Maps itself is restricted: Lists need a parameterized
	type parameter and this type has to be instantiable (or be a parameterized List
	or Map itself), the same with Map values, Map keys have to be java.lang.String 
	instances.

	Added:
	* src/de/schlund/pfixcore/webservice/jsonws/serializers/ListSerializer.java
	* src/de/schlund/pfixcore/webservice/jsonws/serializers/MapSerializer.java
	* tests/junit/de/schlund/pfixcore/webservice/jsonws
	* tests/junit/de/schlund/pfixcore/webservice/jsonws/JSONSerializerTest.java
	* tests/junit/de/schlund/pfixcore/webservice/jsonws/TestBean.java

	Modified:
	* src/de/schlund/pfixcore/example/webservices/TypeTestImpl.java
	* src/de/schlund/pfixcore/example/webservices/TypeTest.java
	* src/de/schlund/pfixcore/webservice/jsonws/SerializerRegistry.java